# veloAgent

./: .gitattributes  =0.6.2  README.md  TODO.md  environment.yml  pyproject.toml
data/: .gitattributes  README.md
release-notes/: v0.1.0.md
src/: __init__.py  abm.py  preprocessing.py
src/veloagent/: __init__.py  abm.py  gg_net.py  perturbations.py  preprocessing.py  vae.py
tutorial/: perturbation_tutorial.ipynb  perturbations.csv  veloagent_tutorial.ipynb
tutorial/.ipynb_checkpoints/: perturbation_tutorial-checkpoint.ipynb  veloagent_tutorial-checkpoint.ipynb
