[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veloagent"
version = "0.1.0"
description = "Scalable deep learning and agent-based modeling framework for RNA velocity estimation"
authors = [
    { name="Vishvak Raghavan", email="vishvakraghavan@gmail.com" },
    { name="Brent Yoon", email="brentyoon10@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8.19,<3.9"
license = { text="MIT" }
keywords = ["rna", "velocity", "agent-based", "scRNA-seq"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "anndata==0.9.2",
    "leidenalg==0.10.2",
    "matplotlib==3.7.3",
    "mesa==2.1.5",
    "mplscience==0.0.7",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "scanpy==1.9.8",
    "scikit-learn==1.1.3",
    "scipy==1.10.1",
    "scvelo==0.3.2",
    "seaborn==0.13.2",
    "statannotations==0.7.2",
    "statsmodels==0.14.1",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.66.5",
    "veloae @ git+https://github.com/qiaochen/VeloAE.git",
]

[tool.setuptools.packages.find]
where = ["src"]
